<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    xmlns:tools="http://schemas.android.com/tools"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent">
    
     <TextView
        android:id="@+id/getText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/getText"/>
    
    <ImageView
        android:id="@+id/img"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_below="@id/getText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:contentDescription="@string/depImg" />
    
    <LinearLayout 
        android:id="@+id/linearOne"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_width="match_parent" >
        
    <Button
        android:id="@+id/scanButton"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/scanButton" />
    
    <Button
        android:id="@+id/btnInitialize"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/btnInitialize" />
         
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/linearTwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/linearOne">

    <Button
        android:id="@+id/makeButton"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/makeButton" />
    
    <Button
        android:id="@+id/btnTest"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/btnTest" />
   
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/linearThree"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/linearTwo">

    <Button
        android:id="@+id/sosButton"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/sosButton" />
    
    <Button
        android:id="@+id/chgPosButton"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/chgPosButton" />
   
    </LinearLayout>

</RelativeLayout>
